--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body{
     color: white;
 }
 .case{
+    margin: auto;
     font-size: 1.5rem;
     display: flex;
     flex-direction: column;
@@ -21,24 +22,48 @@ body{
     background-color: darkslateblue;
     border-radius: var(--corners) var(--corners) 0 0;
     text-align: right;
-    padding: 0.5rem;
+    padding: 1rem;
+    height: 1.5rem;
+    
 }
 .pad{
     display: grid;
-    grid-template-columns: repeat(2, minmax(3rem, 1fr));
-}
-.buttons{
-    border: var(--border);
-    border-radius: var(--corners);
-    width: 2rem;
-    height: auto;
-    display: flex;
+    grid-template-columns: 66% 34%;
     justify-content: center;
     align-items: center;
 }
 .numbers{
     display: grid;
-    gap: 2px;
+    grid-template-columns: repeat(3, minmax(3rem, 1fr));
+    gap: 0.5rem;
+    padding: 1rem;
+    width: 11rem;
 }
+.symbols{
+    display: grid;
+    grid-template-rows: repeat(4, minmax(3rem, 1fr));
+    grid-template-columns: 4;
+    gap: 0.5rem;
+    width: 4rem;
+    justify-self: end;
+    margin: 1rem;
+
+}
+.buttons{
+    border: var(--border);
+    border-radius: var(--corners);
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    
+}
+.buttons:hover{
+    transform: scale(1.1);
+}
+
 
 
